Update order examples

--- a/src/pages/docs/align-self.mdx
+++ b/src/pages/docs/align-self.mdx
@@ -24,7 +24,7 @@ Use `self-auto` to align an item based on the value of the container's `align-it
 
 <div class="flex items-stretch ...">
   <div>1</div>
-  <div class="**self-auto**">2</div>
+  <div class="**self-auto** ...">2</div>
   <div>3</div>
 </div>
 ```
@@ -44,7 +44,7 @@ Use `self-start` to align an item to the start of the container's cross axis, de
 
 <div class="flex items-stretch ...">
   <div>1</div>
-  <div class="**self-start**">2</div>
+  <div class="**self-start** ...">2</div>
   <div>3</div>
 </div>
 ```
@@ -64,7 +64,7 @@ Use `self-center` to align an item along the center of the container's cross axi
 
 <div class="flex items-stretch ...">
   <div>1</div>
-  <div class="**self-center**">2</div>
+  <div class="**self-center** ...">2</div>
   <div>3</div>
 </div>
 ```
@@ -84,7 +84,7 @@ Use `self-end` to align an item to the end of the container's cross axis, despit
 
 <div class="flex items-stretch ...">
   <div>1</div>
-  <div class="**self-end**">2</div>
+  <div class="**self-end** ...">2</div>
   <div>3</div>
 </div>
 ```
@@ -104,7 +104,7 @@ Use `self-stretch` to stretch an item to fill the container's cross axis, despit
 
 <div class="flex items-stretch ...">
   <div>1</div>
-  <div class="**self-stretch**">2</div>
+  <div class="**self-stretch** ...">2</div>
   <div>3</div>
 </div>
 ```
