--- a/src/pages/docs/place-self.mdx
+++ b/src/pages/docs/place-self.mdx
@@ -27,7 +27,7 @@ Use `place-self-auto` to align an item based on the value of the container's `pl
 
 <div class="grid ...">
     <div>1</div>
-    <div class="place-self-auto">2</div>
+    <div class="**place-self-auto** ...">2</div>
     <div>3</div>
     <div>4</div>
     <div>5</div>
@@ -53,7 +53,7 @@ Use `place-self-start` to align an item to the start on both axes:
 
 <div class="grid ...">
     <div>1</div>
-    <div class="place-self-start">2</div>
+    <div class="**place-self-start** ...">2</div>
     <div>3</div>
     <div>4</div>
     <div>5</div>
@@ -79,7 +79,7 @@ Use `place-self-center` to align an item at the center on both axes:
 
 <div class="grid ...">
     <div>1</div>
-    <div class="place-self-center">2</div>
+    <div class="**place-self-center** ...">2</div>
     <div>3</div>
     <div>4</div>
     <div>5</div>
@@ -105,7 +105,7 @@ Use `place-self-end` to align an item to the end on both axes:
 
 <div class="grid ...">
     <div>1</div>
-    <div class="place-self-end">2</div>
+    <div class="**place-self-end** ...">2</div>
     <div>3</div>
     <div>4</div>
     <div>5</div>
@@ -131,7 +131,7 @@ Use `place-self-stretch` to stretch an item on both axes:
 
 <div class="grid ...">
     <div>1</div>
-    <div class="place-self-stretch">2</div>
+    <div class="**place-self-stretch** ...">2</div>
     <div>3</div>
     <div>4</div>
     <div>5</div>
