Update min-width examples

--- a/src/pages/docs/min-width.mdx
+++ b/src/pages/docs/min-width.mdx
@@ -18,14 +18,14 @@ export const classes = { plugin }
 
 Set the minimum width of an element using the `min-w-0` or `min-w-full` utilities.
 
-```html
+```html indigo
 <template preview>
-  <div class="w-24 min-w-full text-center p-6 bg-gray-300">
+  <div class="w-24 min-w-full mx-auto rounded-md bg-indigo-500 text-white text-2xl font-extrabold flex items-center justify-center py-3">
     min-w-full
   </div>
 </template>
 
-<div class="w-24 min-w-full ...">
+<div class="w-24 **min-w-full** ...">
   min-w-full
 </div>
 ```
