Update height examples

--- a/src/pages/docs/height.mdx
+++ b/src/pages/docs/height.mdx
@@ -13,47 +13,53 @@ export const classes = { plugin }
 
 Use `h-auto` to let the browser determine the height for the element.
 
-```html
+```html amber
 <template preview>
-  <div class="h-auto w-32 text-center mx-auto bg-gray-400 p-6">h-auto</div>
+  <div class="h-auto w-40 mx-auto rounded-md bg-amber-500 text-white text-2xl font-extrabold flex items-center justify-center p-6">h-auto</div>
 </template>
 
-<div class="h-auto w-32 p-6 ...">h-auto</div>
+<div class="**h-auto** ...">h-auto</div>
 ```
 
 ## Screen height
 
 Use `h-screen` to make an element span the entire height of the viewport.
 
-```html
-<template preview class="overflow-x-scroll p-4">
-  <div class="bg-gray-400 h-screen"></div>
+```html rose
+<template preview>
+  <div class="h-screen mx-auto rounded-md bg-rose-500 text-white text-2xl font-extrabold flex items-center justify-center p-6">h-screen</div>
 </template>
+
+<div class="**h-screen** p-6 ...">h-screen</div>
 ```
 
 ## Fixed height
 
 Use `h-{number}` or `h-px` to set an element to a fixed height.
 
-```html
-<template preview class="flex justify-around items-end text-sm p-4">
-  <div class="mr-3">
-    <div class="h-8 w-8 bg-gray-400"></div>
-    <p class="text-center mt-2 text-sm">h-8</p>
-  </div>
-  <div class="mr-3">
-    <div class="h-12 w-12 bg-gray-400"></div>
-    <p class="text-center mt-2 text-sm">h-12</p>
-  </div>
-  <div>
-    <div class="h-16 w-16 bg-gray-400"></div>
-    <p class="text-center mt-2 text-sm">h-16</p>
-  </div>
+```html indigo
+<template preview>
+    <div class="flex justify-around items-end space-between-3">
+        <div>
+            <div class="h-8 w-8 rounded-md bg-indigo-500 text-white text-2xl font-extrabold"></div>
+            <p class="text-center mt-2 text-sm text-indigo-600">h-8</p>
+        </div>
+        <div>
+            <div class="h-12 w-12 rounded-md bg-indigo-500 text-white text-2xl font-extrabold"></div>
+            <p class="text-center mt-2 text-sm text-indigo-600">h-12</p>
+        </div>
+        <div>
+            <div class="h-16 w-16 rounded-md bg-indigo-500 text-white text-2xl font-extrabold"></div>
+            <p class="text-center mt-2 text-sm text-indigo-600">h-16</p>
+        </div>
+    </div>
 </template>
 
-<div class="h-8 w-8 ..."></div>
-<div class="h-12 w-12 ..."></div>
-<div class="h-16 w-16 ..."></div>
+<div>
+    <div class="**h-8** w-8 ..."></div>
+    <div class="**h-12** w-12 ..."></div>
+    <div class="**h-16** w-16 ..."></div>
+</div>
 ```
 
 ## Full height
@@ -63,12 +69,12 @@ Use `h-full` to set an element's height to 100% of its parent, as long as the pa
 ```html
 <template preview class="flex justify-around items-end text-sm p-4">
   <div class="h-48">
-    <div class="h-full p-6 bg-gray-400">h-full</div>
+    <div class="h-full w-40 rounded-md bg-indigo-500 text-white text-2xl font-extrabold flex items-center justify-center p-6">h-full</div>
   </div>
 </template>
 
 <div class="h-48">
-  <div class="h-full p-6 bg-gray-400">h-full</div>
+  <div class="**h-full** ...">h-full</div>
 </div>
 ```
 
