Update space between examples

--- a/src/pages/docs/space.mdx
+++ b/src/pages/docs/space.mdx
@@ -20,16 +20,18 @@ export const classes = {
 
 Control the horizontal space between elements using the `space-x-{amount}` utilities.
 
-```html
+```html fuchsia
 <template preview>
-  <div class="flex space-x-4 bg-gray-200">
-    <div class="text-gray-700 text-center bg-gray-400 px-4 py-2">1</div>
-    <div class="text-gray-700 text-center bg-gray-400 px-4 py-2">2</div>
-    <div class="text-gray-700 text-center bg-gray-400 px-4 py-2">3</div>
+  <div class="flex justify-start">
+    <div class="w-16 h-16 text-white text-2xl font-extrabold rounded-md flex items-center justify-center bg-fuchsia-500">1</div>
+    <div class="w-4 h-16 rounded-md bg-fuchsia-300 bg-stripes bg-stripes-white"></div>
+    <div class="w-16 h-16 text-white text-2xl font-extrabold rounded-md flex items-center justify-center bg-fuchsia-500">2</div>
+    <div class="w-4 h-16 rounded-md bg-fuchsia-300 bg-stripes bg-stripes-white"></div>
+    <div class="w-16 h-16 text-white text-2xl font-extrabold rounded-md flex items-center justify-center bg-fuchsia-500">3</div>
   </div>
 </template>
 
-<div class="flex space-x-4">
+<div class="flex **space-x-4** ...">
   <div>1</div>
   <div>2</div>
   <div>3</div>
@@ -40,16 +42,18 @@ Control the horizontal space between elements using the `space-x-{amount}` utili
 
 Control the vertical space between elements using the `space-y-{amount}` utilities.
 
-```html
+```html lightBlue
 <template preview>
-  <div class="space-y-6 bg-gray-200">
-    <div class="text-gray-700 text-center bg-gray-400 px-4 py-2">1</div>
-    <div class="text-gray-700 text-center bg-gray-400 px-4 py-2">2</div>
-    <div class="text-gray-700 text-center bg-gray-400 px-4 py-2">3</div>
+  <div>
+    <div class="h-16 text-white text-2xl font-extrabold rounded-md flex items-center justify-center bg-blue-500">1</div>
+    <div class="h-6 rounded-md bg-blue-300 bg-stripes bg-stripes-white"></div>
+    <div class="h-16 text-white text-2xl font-extrabold rounded-md flex items-center justify-center bg-blue-500">2</div>
+    <div class="h-6 rounded-md bg-blue-300 bg-stripes bg-stripes-white"></div>
+    <div class="h-16 text-white text-2xl font-extrabold rounded-md flex items-center justify-center bg-blue-500">3</div>
   </div>
 </template>
 
-<div class="space-y-6">
+<div class="flex **space-y-6** ...">
   <div>1</div>
   <div>2</div>
   <div>3</div>
@@ -62,14 +66,16 @@ If your elements are in reverse order (using say `flex-row-reverse` or `flex-col
 
 ```html
 <template preview>
-  <div class="flex flex-row-reverse space-x-4 space-x-reverse bg-gray-200">
-    <div class="text-gray-700 text-center bg-gray-400 px-4 py-2">1</div>
-    <div class="text-gray-700 text-center bg-gray-400 px-4 py-2">2</div>
-    <div class="text-gray-700 text-center bg-gray-400 px-4 py-2">3</div>
+  <div class="flex flex-row-reverse justify-start">
+    <div class="w-16 h-16 text-white text-2xl font-extrabold rounded-md flex items-center justify-center bg-fuchsia-500">1</div>
+    <div class="w-4 h-16 rounded-md bg-fuchsia-300 bg-stripes bg-stripes-white"></div>
+    <div class="w-16 h-16 text-white text-2xl font-extrabold rounded-md flex items-center justify-center bg-fuchsia-500">2</div>
+    <div class="w-4 h-16 rounded-md bg-fuchsia-300 bg-stripes bg-stripes-white"></div>
+    <div class="w-16 h-16 text-white text-2xl font-extrabold rounded-md flex items-center justify-center bg-fuchsia-500">3</div>
   </div>
 </template>
 
-<div class="flex flex-row-reverse space-x-4 space-x-reverse">
+<div class="flex flex-row-reverse **space-x-4 space-x-reverse** ...">
   <div>1</div>
   <div>2</div>
   <div>3</div>
