--- a/src/pages/docs/container.mdx
+++ b/src/pages/docs/container.mdx
@@ -7,7 +7,7 @@ import { defaultConfig } from '@/utils/defaultConfig'
 export const screens = defaultConfig.theme.screens
 
 export const classes = (
-  <table className="w-full text-left table-collapse">
+  <table className="w-full text-left border-collapse">
     <colgroup>
       <col className="w-1/4" />
       <col className="w-1/4" />
