--- a/src/pages/docs/animation.mdx
+++ b/src/pages/docs/animation.mdx
@@ -9,7 +9,7 @@ import { Disabling } from '@/components/Disabling'
 
 export const classes = (
   <div className="overflow-y-auto scrollbar-w-2 scrollbar-track-gray-lighter scrollbar-thumb-rounded scrollbar-thumb-gray scrolling-touch lg:max-h-sm">
-    <table className="w-full text-left table-collapse">
+    <table className="w-full text-left border-collapse">
       <thead>
         <tr>
           <th className="z-20 sticky top-0 text-sm font-semibold text-gray-600 bg-white p-0">
